--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,13 @@
                 تقرير حصص الانتظار
               </h1>
             </div>
-
+<!-- اسم المعلمة فوق الجدول -->
+${reportTeacher ? `
+<div style="margin-bottom: 20px; padding: 15px; background: #f8fafc; border-radius: 8px; border: 1px solid #e2e8f0;">
+  <strong style="color: #10b981; font-size: 16px;">اسم المعلمة:</strong>
+  <span style="font-size: 16px; margin-right: 10px;">${reportTeacher}</span>
+</div>
+` : ''}
             <!-- اسم المعلمة فوق الجدول -->
             ${reportTeacher ? `
             <div style="margin-bottom: 20px; padding: 15px; background: #f8fafc; border-radius: 8px; border: 1px solid #e2e8f0;">
